<?xml version="1.0"?>
<package format="2">
  <name>hrpsys_common</name>
  <version>0.0.0</version>
  <description>The hrpsys_common package</description>

  <maintainer email="yoshioka@jsk.imi.i.u-tokyo.ac.jp">Hiroki Yoshioka</maintainer>

  <license>EPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rtmbuild2</depend>
</package>
