<?xml version="1.0"?>
<package format="2">
  <name>hrpsys_core_rtc</name>
  <version>0.0.0</version>
  <description>metapackage for hrpsys</description>

  <maintainer email="yoshioka@jsk.imi.i.u-tokyo.ac.jp">Hiroki Yoshioka</maintainer>

  <license>EPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>sequence_player</exec_depend>
  <exec_depend>state_holder</exec_depend>
  <exec_depend>robot_hardware</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
