<?xml version="1.0"?>
<package format="2">
  <name>robot_hardware</name>
  <version>0.0.0</version>
  <description>The robot_hardware package</description>

  <maintainer email="yoshioka@jsk.imi.i.u-tokyo.ac.jp">Hiroki Yoshioka</maintainer>

  <license>EPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rtmbuild2</depend>
  <depend>choreonoid</depend>
  <depend>hrpsys_trans_bridge</depend>
</package>
